# smk

./: .gitignore  CMakeLists.txt  make.sh
apps/: CMakeLists.txt  global.h  index.html  shape_3d.cpp
apps/assets/: CMakeLists.txt
examples/: bezier.cpp  framebuffer.cpp
website/: host.py
